[package]
name = "egui-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
eframe = "0.29.1"
egui = "0.29.1"
egui-file-dialog = "0.6.1"
egui-notify = "0.15.0"
egui-phosphor = { version = "0.7.1", features = [
    "bold",
    "fill",
    "light",
    "thin",
] }
egui_file = "0.19.0"
egui_form = { version = "0.2.0", features = ["validator_garde"] }
egui_json_tree = "0.6.0"
egui_plot = "0.29.0"
egui_tiles = "0.10.1"
garde = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.128"
strum = "0.26.3"
strum_macros = "0.26.4"

[patch.crates-io]
egui-file-dialog = { git = "https://github.com/fluxxcode/egui-file-dialog", branch = "develop" }
egui_form = { git = "https://github.com/lucasmerlin/hello_egui", branch = "main" }
egui_json_tree = { git = "https://github.com/bircni/egui_json_tree", branch = "egui_0.29.0" }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify", branch = "master" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
expect_used = { level = "deny", priority = 11 }
