[package]
name = "egui-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
eframe = "0.30.0"
egui = "0.30.0"
egui-file-dialog = "0.8.0"
egui-notify = "0.18.0"
egui-phosphor = { version = "0.8.0", features = [
    "bold",
    "fill",
    "light",
    "thin",
] }
egui_file = "0.21.1"
egui_form = { version = "0.4.0", features = ["validator_garde"] }
egui_json_tree = "0.10.0"
egui_plot = "0.30.0"
egui_tiles = "0.11.0"
garde = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.134"
strum = "0.27.0"
strum_macros = "0.26.4"

[patch.crates-io]
# egui_form = { git = "https://github.com/elwerene/hello_egui", branch = "update-to-egui-0.30" }
# egui_file = { git = "https://github.com/bircni/egui_file", branch = "patch-1" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
module_name_repetitions = { level = "allow", priority = 3 }
cast_precision_loss = { level = "allow", priority = 4 }
cast_possible_truncation = { level = "allow", priority = 5 }
cast_sign_loss = { level = "allow", priority = 6 }
out_of_bounds_indexing = { level = "allow", priority = 7 }
perf = { level = "warn", priority = 8 }
style = { level = "warn", priority = 9 }
unwrap_used = { level = "deny", priority = 10 }
expect_used = { level = "deny", priority = 11 }
