[package]
name = "egui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
eframe = "0.31"
egui = "0.31"
egui-file-dialog = "0.9"
egui-notify = "0.19"
egui-phosphor = { version = "0.9", features = [
    "bold",
    "fill",
    "light",
    "thin",
] }
egui_file = "0.22"
egui_form = { version = "0.5", features = ["validator_garde"] }
egui_json_tree = "0.11"
egui_plot = "0.32"
egui_tiles = "0.13"
garde = { version = "0.22", features = ["derive"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"

[patch.crates-io]
# egui_json_tree = { git = "https://github.com/bircni/egui_json_tree", branch = "patch/egui-version" }
# egui_file = { git = "https://github.com/bircni/egui_file", branch = "patch-1" }

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
trivial_casts = "allow"
unused_qualifications = "allow"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# allow some lints
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
expect_used = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
# shadow_reuse = "warn"
str_to_string = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"
